# crowdwisdom-crypto-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  dashboard.py  main.py
src/agents/: DataScraperAgent.py  ModelInferenceAgent.py  PredictionMarketAgent.py  RiskManagerAgent.py
src/crowdwisdom_crypto_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: logger.py
